--- a/CoinView/Views/Home/Index.cshtml
+++ b/CoinView/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <img src="~/images/throbber.gif" class="Throbber" data-bind="visible: !hasValues()" />
 
 <div data-bind="visible: hasValues()">
-    <select id="userSelect" data-bind="value: userID, options: users, optionsValue: 'ID', optionsText: 'Name'"></select>
+    <select id="userSelect" data-bind="value: userID, options: users, optionsValue: 'UserId', optionsText: 'Name'"></select>
 
     <!-- ko if: isTradingAccount() -->
     <h4>.Summary</h4>
@@ -136,10 +136,10 @@
         <!-- ko foreach: buys -->
         <div class="Item">
             <div class="TopContainer">
-                <div class="TopLeft"><span data-bind="text: Exchange.Name"></span></div>
-                <div class="BottomLeft"><span data-bind="text: PriceEUR.formatMoney()"></span></div>
-                <div class="TopRight"><span data-bind="text: AmountAfterFee.formatNumber()" , class="TextGreen"></span></div>
-                <div class="BottomRight"><span data-bind="text: (Amount * PriceEUR).formatMoney()" , class="TextGreen"></span></div>
+                <div class="TopLeft"><span data-bind="text: $root.wallets()[ExchangeWalletId].Name"></span></div>
+                <div class="BottomLeft"><span data-bind="text: PriceEur.formatMoney()"></span></div>
+                <div class="TopRight"><span data-bind="text: AmountInWallet.formatNumber()" , class="TextGreen"></span></div>
+                <div class="BottomRight"><span data-bind="text: (AmountBought * PriceEur).formatMoney()" , class="TextGreen"></span></div>
             </div>
         </div>
         <!-- /ko -->
@@ -151,45 +151,45 @@
     <div class="Column">
         <h4>.Investments</h4>
         <div class="SummaryTable">
-        <table>
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Exchange</th>
-                    <th>Wallet</th>
-                    <th>PriceEUR</th>
-                    <th>AmountInWallet</th>
-                    <th>Buy Value</th>
-                    <th>Sell Value</th>
-                    <th>Profit</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- ko foreach: investments-->
-                <tr>
-                    <td data-bind="text: date().substring(0,10)"></td>
-                    <td data-bind="text: exchange().Name"></td>
-                    <td data-bind="text: wallet().Name"></td>
-                    <td class="Number" data-bind="text: priceEUR().formatMoney()"></td>
-                    <td class="Number" data-bind="text: amountInWallet().formatNumber()"></td>
-                    <td class="Number" data-bind="text: buyValueEUR().formatMoney()"></td>
-                    <td class="Number" data-bind="text: sellValueEUR().formatMoney()"></td>
-                    <td class="Number" data-bind="text: changeEUR().formatMoney() + changeEURPercent().formatPercent(), css: changeEUR() > 0 ? 'TextGreen' : 'TextRed'"></td>
-                </tr>
-                <!-- /ko -->
-                <tr style="border-top: 1px solid">
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td class="Number" data-bind="text: investmentAmountInWalletSum().formatNumber()"></td>
-                    <td class="Number" data-bind="text: investmentBuyValueEURSum().formatMoney()"></td>
-                    <td class="Number" data-bind="text: investmentSellValueEURSum().formatMoney()"></td>
-                    <td class="Number" data-bind="text: investmentChangeEURSum().formatMoney() + investmentChangeEURPercentSum().formatPercent(), css: investmentChangeEURSum() > 0 ? 'TextGreen' : 'TextRed'"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Exchange</th>
+                        <th>Wallet</th>
+                        <th>PriceEUR</th>
+                        <th>AmountInWallet</th>
+                        <th>Buy Value</th>
+                        <th>Sell Value</th>
+                        <th>Profit</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- ko foreach: investments-->
+                    <tr>
+                        <td data-bind="text: date().substring(0,10)"></td>
+                        <td data-bind="text: exchange().Name"></td>
+                        <td data-bind="text: wallet().Name"></td>
+                        <td class="Number" data-bind="text: priceEUR().formatMoney()"></td>
+                        <td class="Number" data-bind="text: amountInWallet().formatNumber()"></td>
+                        <td class="Number" data-bind="text: buyValueEUR().formatMoney()"></td>
+                        <td class="Number" data-bind="text: sellValueEUR().formatMoney()"></td>
+                        <td class="Number" data-bind="text: changeEUR().formatMoney() + changeEURPercent().formatPercent(), css: changeEUR() > 0 ? 'TextGreen' : 'TextRed'"></td>
+                    </tr>
+                    <!-- /ko -->
+                    <tr style="border-top: 1px solid">
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="Number" data-bind="text: investmentAmountInWalletSum().formatNumber()"></td>
+                        <td class="Number" data-bind="text: investmentBuyValueEURSum().formatMoney()"></td>
+                        <td class="Number" data-bind="text: investmentSellValueEURSum().formatMoney()"></td>
+                        <td class="Number" data-bind="text: investmentChangeEURSum().formatMoney() + investmentChangeEURPercentSum().formatPercent(), css: investmentChangeEURSum() > 0 ? 'TextGreen' : 'TextRed'"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <div class="Column Price">
