--- a/CoinView/Views/Shared/_Layout.cshtml
+++ b/CoinView/Views/Shared/_Layout.cshtml
@@ -16,28 +16,6 @@
         <script src="~/js/shared/xhr.js" asp-append-version="true"></script>
         <script src="~/js/shared/extensions.js" asp-append-version="true"></script>
     </environment>
-    @*<environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/lib/linq/linq.js"></script>
-        <script src="~/js/shared/site.js" asp-append-version="true"></script>
-        <script src="~/js/shared/xhr.js" asp-append-version="true"></script>
-        <script src="~/js/shared/extensions.js" asp-append-version="true"></script>
-    </environment>*@
 
 </head>
 <body>
@@ -53,9 +31,12 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CoinView</a>
             </div>
             <div class="navbar-collapse collapse">
-                @*<ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                </ul>*@
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Home" asp-action="Test">Test</a></li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -64,7 +45,7 @@
         <!-- ko if: hasValues() -->
         <hr />
         <footer>
-            <p>&copy; 2017 - CoinView</p>
+            <p>&copy; 2018 - CoinView</p>
         </footer>
         <!-- /ko -->
     </div>
