CoinValues from DB

--- a/CoinView/Views/Home/Index.cshtml
+++ b/CoinView/Views/Home/Index.cshtml
@@ -194,7 +194,7 @@
 
     <div class="Column Price">
         <h4>.Current Price</h4>
-        <h3 data-bind="text: hasValues() ? coinValues()[1].Price_eur.formatMoney() : ''"></h3>
+        <h3 data-bind="text: hasValues() ? coinValues()[1].PriceEur.formatMoney() : ''"></h3>
     </div>
 
     <!-- /ko -->
