--- a/CoinView/Views/Shared/_Layout.cshtml
+++ b/CoinView/Views/Shared/_Layout.cshtml
@@ -28,14 +28,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CoinView</a>
+                <a asp-area="" asp-controller="Home" asp-action="Summary" class="navbar-brand">CoinView</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="UserDetail" asp-route-id="1">Janis</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Test">Test</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="UserDetail" asp-route-id="3">Lena</a></li>
                 </ul>
             </div>
         </div>
