--- a/CoinView/Views/Shared/_Layout.cshtml
+++ b/CoinView/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 
     <environment names="Development,Staging,Production">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/main.css" />
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/knockout/dist//knockout.debug.js"></script>
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Summary" class="navbar-brand">CoinView</a>
+                <a asp-area="" asp-controller="Summary" asp-action="Summary" class="navbar-brand">CoinView</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -42,12 +42,6 @@
     </nav>
     <div class="container body-content">
         @RenderBody()
-        <!-- ko if: hasValues() -->
-        <hr />
-        <footer>
-            <p>&copy; 2018 - CoinView</p>
-        </footer>
-        <!-- /ko -->
     </div>
 
     @RenderSection("Scripts", required: false)
