--- a/CoinView/wwwroot/css/main.css
+++ b/CoinView/wwwroot/css/main.css
@@ -26,24 +26,19 @@ h4 {
     padding: 5px 10px 5px 10px;
 }
 
-.SummaryTable th {
-    border-right: 1px solid;
-}
-
 .SummaryTable td {
-    padding-left: 10px;
+    padding: 0 10px 0 10px;
 }
 
-table th {
-    padding-right: 10px;
-    padding-left: 6px;
+.SummaryTable td.BorderLeft {
+    border-left: 1px solid white;
 }
 
-table td {
-    padding-right: 15px;
+.SummaryTable tr.BorderTop td {
+    border-top: 1px solid white;
 }
 
-table .Number {
+.SummaryTable .Number {
     text-align: right;
 }
 
@@ -53,14 +48,4 @@ table .Number {
 
 .TextRed {
     color: #ff4a4a;
-}
-
-#Content {
-    visibility: hidden;
-}
-
-.Throbber {
-    position: fixed;
-    top: 50%;
-    left: 50%;
 }
