--- a/CoinView/Views/Shared/_Layout.cshtml
+++ b/CoinView/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Summary" asp-action="Summary" class="navbar-brand">CoinView</a>
+                <a asp-area="" asp-controller="Summary" asp-action="GetData" class="navbar-brand">CoinView</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
