--- a/CoinView/Views/Summary/Summary.cshtml
+++ b/CoinView/Views/Summary/Summary.cshtml
@@ -2,11 +2,10 @@
 
 <h4>.Summary</h4>
 
-
-
 @Html.DisplayFor(x => x.UserSummaries)
-
-
-<a asp-area="" asp-controller="Summary" asp-action="Update">UPDATE</a><br /><br /><br /><br />
+<br /><br />
 
 @Html.DisplayFor(x => x.CombinedSummary)
+
+<br />
+<a asp-area="" asp-controller="Summary" asp-action="Update">UPDATE</a>
