--- a/CoinView/Views/Shared/_Layout.cshtml
+++ b/CoinView/Views/Shared/_Layout.cshtml
@@ -12,7 +12,6 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/lib/knockout/dist//knockout.debug.js"></script>
         <script src="~/lib/linq/linq.js"></script>
-        <script src="~/js/shared/site.js" asp-append-version="true"></script>
         <script src="~/js/shared/xhr.js" asp-append-version="true"></script>
         <script src="~/js/shared/extensions.js" asp-append-version="true"></script>
     </environment>
@@ -32,10 +31,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="UserDetail" asp-route-id="1">Janis</a></li>
+                    <li><a asp-area="" asp-controller="User" asp-action="GetData" asp-route-id="1">Janis</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="UserDetail" asp-route-id="3">Lena</a></li>
+                    <li><a asp-area="" asp-controller="User" asp-action="GetData" asp-route-id="3">Lena</a></li>
                 </ul>
             </div>
         </div>
