Toggle EUR/BTC for Summary

--- a/CoinView/Views/Shared/DisplayTemplates/SummaryDO.cshtml
+++ b/CoinView/Views/Shared/DisplayTemplates/SummaryDO.cshtml
@@ -2,7 +2,7 @@
 
 <div class="SummaryTable">
     <span class="Title">@Model.Name</span><br />
-    <table>
+    <table class="SummaryEUR">
         <tr>
             <th></th>
             <th class="BorderLeft">Invests</th>
@@ -41,7 +41,7 @@
         </tr>
     </table>
 
-    <table style="padding-left: 70px;">
+    <table class="SummaryBTC">
         <tr>
             <th></th>
             <th class="BorderLeft">Invests</th>
@@ -80,4 +80,3 @@
         </tr>
     </table>
 </div>
-<br /><br />
