--- a/CoinView/wwwroot/css/main.css
+++ b/CoinView/wwwroot/css/main.css
@@ -18,11 +18,9 @@ h4 {
 }
 
 .SummaryTable {
-    background: #1e2b34;
     border-radius: 7px;
     display: inline-block;
     background: #131e25;
-    border-radius: 7px;
     padding: 5px 10px 5px 10px;
     margin-right: 50px;
 }
@@ -37,6 +35,10 @@ h4 {
 
 .SummaryTable tr.BorderTop td, .SummaryTable tr.BorderTop th {
     border-top: 1px solid white;
+}
+
+.SummaryTable tr.BorderBottom td, .SummaryTable tr.BorderBottom th {
+    border-bottom: 1px solid white;
 }
 
 .SummaryTable th {
