--- a/CoinView/Views/User/User.cshtml
+++ b/CoinView/Views/User/User.cshtml
@@ -32,6 +32,9 @@
             <th>Change 1h</th>
             <th>Change 24h</th>
             <th>Change 7h</th>
+            <th>Amount</th>
+            <th>BuyPpsEUR</th>
+            <th>SellPpsEUR</th>
             <th>BuyValueEUR</th>
             <th>SellValueEUR</th>
             <th>ProfitEUR</th>
@@ -39,7 +42,7 @@
         </tr>
         @Html.DisplayFor(x => x.OpenTrades)
         <tr class="BorderTop">
-            <td colspan="4"></td>
+            <td colspan="7"></td>
             <td class="Number">@Model.OpenTradesBuyValueEURSum.ToString("C")</td>
             <td class="Number">@Model.OpenTradesSellValueEURSum.ToString("C")</td>
             <td class="Number @(Model.OpenTradesProfitValueEURSum >= 0 ? "TextGreen" : "TextRed")">@Model.OpenTradesProfitValueEURSum.ToString("C")</td>
@@ -54,6 +57,9 @@
             <th>Change 1h</th>
             <th>Change 24h</th>
             <th>Change 7h</th>
+            <th>Amount</th>
+            <th>BuyPpsEUR</th>
+            <th>SellPpsEUR</th>
             <th>BuyValueEUR</th>
             <th>SellValueEUR</th>
             <th>ProfitEUR</th>
@@ -61,7 +67,7 @@
         </tr>
         @Html.DisplayFor(x => x.ClosedTrades)
         <tr class="BorderTop">
-            <td colspan="4"></td>
+            <td colspan="7"></td>
             <td class="Number">@Model.ClosedTradesBuyValueEURSum.ToString("C")</td>
             <td class="Number">@Model.ClosedTradesSellValueEURSum.ToString("C")</td>
             <td class="Number @(Model.ClosedTradesProfitValueEURSum >= 0 ? "TextGreen" : "TextRed")">@Model.ClosedTradesProfitValueEURSum.ToString("C")</td>
